# wasmcloud-inventory-demo

./: .gitignore  README.md
branchmanager/: Cargo.toml  README.md  wasmcloud.toml
branchmanager/src/: inventory.rs  lib.rs
fruitjokes/: wasmcloud.toml
fruitjokes/src/: lib.rs
fruitjokes/ui/src/: App.js
hobby/fruitjokes/: Cargo.toml  Makefile  mecho  wadm.yaml  wasmcloud.toml
industry/: README.md  local.yaml  wadm.yaml
industry/branchmanager/: Cargo.toml  README.md  wasmcloud.toml
industry/branchmanager/src/: inventory.rs  lib.rs
industry/branchmanager/ui/: package-lock.json  package.json
industry/branchmanager/ui/public/: index.html
industry/corporatedashboard/: Cargo.toml  README.md  wasmcloud.toml
industry/corporatedashboard/src/: lib.rs
industry/corporatedashboard/ui/: package-lock.json  package.json
industry/corporatedashboard/ui/src/: App.js
industry/hubdashboard/: Cargo.toml  Makefile  README.md  build.sh  wasmcloud.toml
industry/hubdashboard/src/: lib.rs
industry/hubdashboard/ui/public/: index.html
industry/hubdashboard/ui/src/: App.js  Logo.js
industry/unitmanager/: Cargo.toml  README.md  wasmcloud.toml
industry/unitmanager/src/: lib.rs
industry/unitmanager/ui/public/: index.html
industry/unitmanager/ui/src/: App.js  Logo.js  chakra-theme.js
