[package]
name = "branchmanager"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "branchmanager"

[dependencies]
futures = "0.3"
serde = "1.0.188"
serde_json = "1.0"
wasmbus-rpc = "0.14"
wasmcloud-interface-logging = "0.10.0"
wasmcloud-interface-messaging = "0.10"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
