[package]
name = "corporatedashboard"
version = "0.2.0"
authors = ["Brooks Townsend <brooks@cosmonic.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "corporatedashboard"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde_json = "1.0"

wasmbus-rpc = "0.14"
wasmcloud-interface-keyvalue = "0.11"
wasmcloud-interface-httpserver = "0.11"
wasmcloud-interface-messaging = "0.10.0"
rust-embed = "8.0.0"
mime_guess = "2.0.4"
serde = "1.0.188"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
