[package]
name = "branchmanager"
version = "0.3.0"
authors = ["Brooks Townsend <brooks@cosmonic.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "branchmanager"

[dependencies]
futures = "0.3"
mime_guess = "2.0.4"
rust-embed = "8.2.0"
serde = "1.0.188"
serde_json = "1.0"
wasmbus-rpc = "0.15"
wasmcloud-interface-httpserver = "0.12.0"
wasmcloud-interface-keyvalue = "0.12.0"
wasmcloud-interface-logging = "0.11.0"
wasmcloud-interface-messaging = "0.11.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
